done: Add x-overflow property to biostory div in mobile css, modified width and height of each project in the projects section in mobile css; fix: size of projects in project section to fit better in mobile view

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -89,6 +89,11 @@ hr {
 
 .bio-section{
   height: 100vh;
+  overflow-x: hidden !important;
+}
+
+.bio-story{
+  font-size: 1.2rem;
 }
 
 
@@ -101,7 +106,7 @@ hr {
 .feat_thumbnail {
     display: block;
     /* min-width: 100%; */
-    width: 210px;
+    width: 100px !important;
     height: 150px;
     /*object-fit: scale-down;*/
     border-radius: 5px;
@@ -140,10 +145,14 @@ hr {
 }
 
 footer {
-    margin-right: 10px;
-    margin-left: 10px;
-    text-align: center;
+  bottom: 0;
+  padding-bottom: 0 !important;
+  width: 100vw;
+  text-align: center;
+  background-color: #40E0D0;
+  color: black;
 }
+
 
 .bio-contact{
   height: 100vh;
@@ -159,7 +168,7 @@ footer {
 /*     Card Flip Styling    */
 .card{
   margin: 20px;
-  background: #5677fc;
+  background: #5677FC;
   width: 200px;
   height: 200px;
   transition: all 0.6s ease;
